update product services
